--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>skyflux | Cloud Hosting For Everyone</title>
 </head>
@@ -42,8 +43,34 @@
                     <div class="form-control">
                         <input type="text" name="email" placeholder="Email" required>
                     </div>
-                    <input type="submit" value="Send" class="btn btn-primary">
+                    <input type="submit" value="Send" class="btn btn-">
                 </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Stats -->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">Welcome to the best platform for building applications of all types with modern architecture and scaling 
+            </h3>
+
+            <div class="grid grid-3 text-center my4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>10,349,405</h3>
+                    <p class="text-secondary">Deployments</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa-3x"></i>
+                    <h3>987TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,343,265</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
             </div>
         </div>
     </section>
