--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2>Request a Demo</h2>
                 <form>
                     <div class="form-control">
-                        <input type="text" name="name" placeholder="name" required>
+                        <input type="text" name="name" placeholder="Name" required>
                     </div>
                     <div class="form-control">
                         <input type="text" name="company" placeholder="Company Name" required>
@@ -151,7 +151,6 @@
             </ul>
         </nav>
         <div class="social">
-
             <a href="#"><i class="fab fa-github fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
